--- a/fishcreek.css
+++ b/fishcreek.css
@@ -1,21 +1,34 @@
 body { background-color: #FFFFFF;
       color: #003366 ;
 	  font-family: Verdana, Arial, sans-serif;
+      background-color: #5280C5;
+      background-image: url(gradientblue.jpg);
 }
-header { background-color: #003366;
+header { background-color: #000066;
        color: #F0F0F0;
-	   font-family: Georgia, "Times New Roman", serif;
-	   background-image: url(fishcreeklogo.gif);
+	   background-image: url(bigfish.gif);
 	   background-repeat: no-repeat;
 	   background-position: center;
 	   text-align: center;
 }
 h1 { line-height: 250%;
- 	margin-bottom: 0;}
+ 	margin-bottom: 0;
+    font-size: 3em;
+    padding: .02em;
+    text-shadow: #CCCCCC;
+}
 nav { font-weight: bold;  
-     background-color: #5280C5;
-     text-align: center;
-     padding: 5px;}
+     padding: 5px;
+     float: left;
+     width: 180px;
+}
+nav ul {list-style-type: none;
+}
+nav ul a{text-decoration: none;
+}
+nav a:link{color: #000066;}
+nav a:visited{color: #5280C5}
+nav a:hover{color: #3262A3}
 .category { font-weight: bold;
 			color: #5280C5;
 			 font-family: Georgia, "Times New Roman", serif; 
@@ -27,15 +40,19 @@ dt { font-weight: bold;
 	 color: #5280C5;
      font-family: Georgia, "Times New Roman", serif;	 
 }
-main { padding-left: 10px;
-      padding-right: 10px;
+main { padding-left: 2em;
+      padding-right: 2em;
+      margin-left: 180px;
+      background-color: #ffffff;
+      border: 1px;
+      border-color: #AEC3E3;
 }
 footer { font-size: .70em;
        font-style: italic;
 	   text-align: center;
 	   background-color: #AEC3E3;
-}
-footer nav { background-color: 	#F0F0F0	;
+       padding: 1em;
+       margin-left: 180px;
 }
 #wrapper { width: 80%;
            margin-right: auto;
@@ -43,3 +60,5 @@ footer nav { background-color: 	#F0F0F0	;
 		   background-color: #F0F0F0;
 		   min-width: 700px;
 }
+header, nav, main, footer {display: block;}
+* {box-sizing: border-box;}
